--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,10 @@ services:
   db:
     image: mongo
     ports:
-      - "27017:27017"
-      - "27018:27018"
-      - "27019:27019"
-  vimeo:
+      - "27017-27019:27017-27019"
+  scraper:
     build: .
+#    image: pedrocesarti/vimeo-scraper
     environment:
       - ID_START=335474674
       - ID_END=335474675
