--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,31 @@ version: '3'
 
 services:
   db:
-    image: mongo
+    image: mongo:latest
+    deploy:
+      replicas: 1
     ports:
-      - "27017-27019:27017-27019"
+      - "27017:27017"
+      - "27018:27018"
+      - "27019:27019"
     volumes:
       - $PWD/datadir:/data/db
+    networks:
+      - vimeo-scraper-network
+
   scraper:
-#    build: .
-    image: pedrocesarti/vimeo-scraper
+    # build: ./dockerworkspace
+    image: pedrocesarti/vimeo-scraper:test
+    deploy:
+      replicas: 2
     environment:
       - ID_START=335000000
-      - ID_END=339999999
-    links:
-      - db
+      - ID_END=335000200
+    networks:
+      - vimeo-scraper-network
     depends_on:
       - db
+
+
+networks:
+  vimeo-scraper-network:
