--- a/dockerworkspace/Dockerfile
+++ b/dockerworkspace/Dockerfile
@@ -4,9 +4,9 @@ ENV ID_END 339999999
 
 RUN mkdir /vimeo
 WORKDIR /vimeo
-ADD run.py . 
+ADD . . 
 ADD requirements.txt . 
 
 RUN pip install -r requirements.txt
 
-CMD python run.py $ID_START $ID_END
+CMD python scraper.py $ID_START $ID_END
